@@ -1,6 +1,9 @@
 General
 	* Changed leak reporter to save memory by using a StringBuilder.
 
+Math
+	* Added float conversion operator to Rational.
+
 DXGI
 	* Added lazy enumeration of adapters to Factory and Factory1.
 	* Added lazy enumeration of outputs to Adapter.
